--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "15.3.2",
-    "react-native": "0.36.0"
+    "react-native": "0.36.0",
+    "react-native-yuntongxun": "file:///Users/liubinbin/github/lotosbin/react-native-yuntongxun"
   },
   "jest": {
     "preset": "jest-react-native"
